# payroll-compliance-engine

./: .cursorrules  .gitignore  Dockerfile  Makefile  README.md  clean_tree.txt  docker-compose.yml  file_tree.txt  generate_phase1_tests.py  pyproject.toml
cli/: validate_payroll.py
demo_data/: README.md  clean_payroll.csv  minor_issues_payroll.csv  severe_issues_payroll.csv
docs/: PHASE_1_STABILITY_LOCK.md  PHASE_2_CORRECTNESS_LOCK.md  demo_walkthrough.md  engine_architecture.md  ie-2026.01_rule_library.md  phase5_rule_library_scope_contract.md  rule_inventory_matrix.csv
frontend/: README.md  index.html  package.json  tailwind.config.js
jobs/: phase4_production_hardening.md  phase5_batch1.md  phase5_batches_2_4.md
phase1_test_files/: 01_clean.csv  02_broken_date.csv  03_garbage_date.csv  04_bad_gross.csv  05_empty.csv  06_mixed.csv  07_corrupt_style.csv  08_large.csv
scripts/: find_aggregate.ps1  fix_bom_loader.ps1  fix_helpers_export.ps1  fix_namespace_collision.ps1  local_verify.ps1  make_production_ready.py  phase4_execution_plan.md  resolve_helpers_conflict.ps1
tests/: test_cli_smoke.py  test_contract_freeze.py  test_contributions.py  test_demo_datasets.py  test_deterministic_run.py  test_engine_order_freeze.py  test_health_endpoint.py  test_ie2026_config_contract.py  test_ie2026_deterministic_findings.py  test_ie2026_execution_order.py  test_ie2026_pipeline.py  test_ie2026_registry.py  test_ie2026_registry_contract.py  test_ie2026_rules.py  test_net_plausibility.py  test_paye_001.py  test_paye_003.py  test_paye_004.py  test_paye_005.py  test_prsi_001.py  (+36 more)
(+71 files in other folders)
