[project]
name = "payroll-compliance"
version = "0.1.0"
description = "Ireland-focused payroll compliance validator (v1)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "cryptography>=42.0",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==4.0.1",
  "reportlab>=4.1",
  "python-dateutil>=2.9.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
